# Flask-Chat

./: .env.example  .gitignore  .ruff.toml  Pipfile  README.md  migrations.py  pyproject.toml  run.py
App/: __init__.py
App/auth/templates/auth/: auth_layout.html.jinja2  forgotpassword.html.jinja2  login.html.jinja2  resetpassword.html.jinja2  sign-up.html.jinja2
App/auth/views/: auth_views.py
App/site/templates/site/: chat.html.jinja2  index.html.jinja2
App/site/templates/site/includes/: layout.html.jinja2
App/site/views/: site_chat_views.py  site_index_views.py
App/static/css/: chat.css  login.css  signup.css
App/static/js/: chat.js  socket.init.js
Config/: example_config.py
Helpers/: __init__.py
Models/: models.py
